# FunnyDiscord

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  requirements.sh
src/: main.cpp
